# code-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: MIGRATIONS.md
eval/: dataset.example.json
src/code_rag/: api.py  cli.py  dependencies.py  models.py  settings.py
src/code_rag/adapters/: __init__.py  answer.py  elasticsearch_index.py  embeddings.py  git_repo_cache.py  gitlab_client.py  http.py  permissions.py
src/code_rag/adapters/answer/: __init__.py  anthropic_answer_provider.py  extractive_answer_provider.py  grounding.py
src/code_rag/adapters/elasticsearch/: __init__.py  _base.py  _indexing.py  _jobs.py  _search.py  index.py  mappings.py  permission_store.py
src/code_rag/adapters/embeddings/: __init__.py  fastembed_embedding_provider.py  hash_embedding_provider.py  http_embedding_provider.py
src/code_rag/adapters/git/: __init__.py  git_repo_cache.py
src/code_rag/adapters/gitlab/: __init__.py  gitlab_client.py
src/code_rag/adapters/http/: __init__.py  retries.py
src/code_rag/adapters/permissions/: __init__.py  in_memory_permission_store.py
src/code_rag/adapters/rerank/: http_cross_encoder_reranker.py
src/code_rag/application/: chunking.py  file_classifier.py  indexing.py  jobs.py  metrics.py  permissions.py  repo_metadata.py  retrieval.py  secrets.py
src/code_rag/apps/auth/: __init__.py  authenticator.py
src/code_rag/apps/chunking/: __init__.py  chunk_builder.py  raw_chunk.py  tree_sitter_chunker.py  tree_sitter_node_types.py
src/code_rag/apps/chunking/strategies/: __init__.py  base.py  python_chunker.py  regex_chunker.py  text_chunker.py
src/code_rag/apps/classification/: __init__.py  file_classifier.py
src/code_rag/apps/communities/: community_detector.py
src/code_rag/apps/eval/: eval_case.py  retrieval_evaluator.py
src/code_rag/apps/indexing/: __init__.py  indexing_service.py
src/code_rag/apps/jobs/: __init__.py  index_job_queue.py
src/code_rag/apps/metadata/: __init__.py  repo_metadata_provider.py
src/code_rag/apps/metrics/: __init__.py  metrics_registry.py  timing_stats.py
src/code_rag/apps/permissions/: __init__.py  permission_service.py
src/code_rag/apps/ratelimit/: rate_limiter.py
src/code_rag/apps/retrieval/: __init__.py  graph_expander.py  hyde_expander.py  query_classifier.py  query_expander.py  reranker.py  retrieval_service.py
src/code_rag/apps/secrets/: __init__.py  secret_pattern.py  secret_scanner.py
src/code_rag/config/: __init__.py  logging.py  request_context.py  settings.py  tracing.py
src/code_rag/domain/: __init__.py  ids.py  languages.py
src/code_rag/domain/enums/: __init__.py  chunk_kind.py  edge_type.py  file_class.py  query_type.py  symbol_role.py
src/code_rag/domain/models/: __init__.py  answer_request.py  answer_response.py  auth_context.py  changed_file.py  code_chunk.py  code_community.py  code_edge.py  code_symbol.py  embedding_result.py  file_metadata.py  gitlab_project.py  index_job_record.py  index_job_result.py  job_status.py  permission_record.py  repo_metadata.py  search_hit.py  search_request.py  search_response.py  secret_finding.py  source_citation.py
src/code_rag/interfaces/cli/: __init__.py  app.py
src/code_rag/interfaces/rest/: __init__.py  dependencies.py  main.py  security.py
src/code_rag/interfaces/rest/routers/: __init__.py  answer.py  health.py  helpers.py  indexing.py  indices.py  jobs.py  metrics.py  permissions.py  search.py  webhooks.py
src/code_rag/interfaces/rest/routers/schemas/: __init__.py  incremental_index_request.py  index_project_request.py
src/code_rag/ports/: __init__.py  answer.py  embedding.py  gitlab.py  job_store.py  permissions.py  repo_store.py  repository.py  rerank.py  search.py
tests/: conftest.py  test_answer.py  test_api.py  test_auth.py  test_chunk_strategies.py  test_chunking.py  test_cli.py  test_community_detector.py  test_cross_encoder_reranker.py  test_elasticsearch_integration.py  test_embedding_provider.py  test_embeddings.py  test_extractive_answer.py  test_graph_expander.py  test_grounding.py  test_hardening.py  test_health.py  test_indexing.py  test_indexing_routes.py  test_indexing_service.py  test_jobs.py  test_logging.py  test_permissions.py  test_query_classifier.py  test_query_expander.py  test_rate_limit_api.py  test_rate_limiter.py  test_request_context.py  test_reranker.py  test_retries.py  test_retrieval.py  test_retrieval_evaluator.py  test_tree_sitter.py  test_webhooks.py
tests/fixtures/: retrieval_golden.json  seed_eval_index.py
