[project]
name = "code-rag"
version = "0.1.0"
description = "GitLab codebase RAG indexer and retrieval service backed by Elasticsearch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8.13.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
code-rag = "code_rag.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
