[project]
name = "code-rag"
version = "0.1.0"
description = "GitLab codebase RAG indexer and retrieval service backed by Elasticsearch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8.13.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.40.0",
]
tree-sitter = [
  "tree-sitter>=0.23",
  "tree-sitter-c>=0.23",
  "tree-sitter-c-sharp>=0.23",
  "tree-sitter-cpp>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-php>=0.23",
  "tree-sitter-ruby>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-typescript>=0.23",
]
dev = [
  "anthropic>=0.40.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "tree-sitter>=0.23",
  "tree-sitter-c>=0.23",
  "tree-sitter-c-sharp>=0.23",
  "tree-sitter-cpp>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-php>=0.23",
  "tree-sitter-ruby>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-typescript>=0.23",
]

[project.scripts]
code-rag = "code_rag.interfaces.cli.app:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Treat warnings as errors so regressions surface in CI, but allow-list the
# third-party Starlette TestClient/httpx deprecation we cannot fix here.
filterwarnings = [
  "error",
  "ignore:Using `httpx`",
]
